(site) Fix broken styling on small displays

--- a/site/public/css/planetaryjs.less
+++ b/site/public/css/planetaryjs.less
@@ -100,12 +100,6 @@ canvas#homepage-globe-canvas {
   }
 }
 
-@media screen and (max-width: 400px) {
-  .ui.menu.main-menu .item {
-    padding-left: 0px;
-  }
-}
-
 @media screen and (min-width: 1050px) {
   .main-menu {
     padding-left: 8%;
